--- a/src/frontend/index.css
+++ b/src/frontend/index.css
@@ -268,6 +268,8 @@ main {
   display: flex;
   flex-direction: column;
   border: 1px solid var(--border-color);
+  padding: 1rem;
+  padding-bottom:2rem;
 }
 
 .package-card:hover {
@@ -664,9 +666,9 @@ button.delete-image-btn {
 
 .selection-indicator {
   position: absolute;
-  top: 1rem;
+  top: 4rem;
   right: 1rem;
-  color: var(--text-color);
+  color: var(--text-color-muted);
   font-size: 1.25rem;
   transition: color 0.2s;
 }
