wifey's request for tan colors
still needs work for readability in light and dark modes

--- a/src/frontend/index.css
+++ b/src/frontend/index.css
@@ -1,6 +1,6 @@
 :root {
-  --primary: #83583d;
-  --primary-light: #be8957;
+  --primary: #b49974;
+  --primary-light: #D6B588;
   --primary-dark-mode: #83583d;
   --secondary: #3f37c9;
   --success: #4cc9f0;
